// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features should render item default 1`] = `
<div>
  <p
    class="players"
  >
    <span
      aria-label="name"
      role="img"
    >
      icon
    </span>
    <b
      class="highlight"
    >
      desc
    </b>
  </p>
</div>
`;

exports[`Features should render item with condition 1`] = `<div />`;

exports[`Features should render list 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="box"
    >
      <p
        class="players"
      >
        <span
          aria-label="name1"
          role="img"
        >
          icon1
        </span>
        <b
          class="highlight"
        >
          desc1
        </b>
      </p>
    </div>
  </div>
</div>
`;
